<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/prevMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lefthez" >
        </ImageView>

        <Button
            android:id="@+id/currentMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:background="@drawable/hederblue"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#2060CE" >
        </Button>

        <ImageView
            android:id="@+id/nextMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/righthez" >
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/blue_bg_w_no_text"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".14"
            android:gravity="center"
            android:shadowColor="#555555"
            android:shadowDx="5.0"
            android:shadowDy="5.0"
            android:shadowRadius="3.0"
            android:text="@string/Sun"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".14"
            android:gravity="center"
            android:shadowColor="#555555"
            android:shadowDx="5.0"
            android:shadowDy="5.0"
            android:shadowRadius="3.0"
            android:text="@string/Mon"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".14"
            android:gravity="center"
            android:shadowColor="#555555"
            android:shadowDx="5.0"
            android:shadowDy="5.0"
            android:shadowRadius="3.0"
            android:text="@string/Tue"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".14"
            android:gravity="center"
            android:shadowColor="#555555"
            android:shadowDx="5.0"
            android:shadowDy="5.0"
            android:shadowRadius="3.0"
            android:text="@string/Wed"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".14"
            android:gravity="center"
            android:shadowColor="#555555"
            android:shadowDx="5.0"
            android:shadowDy="5.0"
            android:shadowRadius="3.0"
            android:text="@string/Thu"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".14"
            android:gravity="center"
            android:shadowColor="#555555"
            android:shadowDx="5.0"
            android:shadowDy="5.0"
            android:shadowRadius="3.0"
            android:text="@string/Fri"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".14"
            android:gravity="center"
            android:shadowColor="#555555"
            android:shadowDx="5.0"
            android:shadowDy="5.0"
            android:shadowRadius="3.0"
            android:text="@string/Sat"
            android:textColor="#FFFFFF" />
        <!--
        <ImageView
			android:id="@+id/calendarheader"
			android:src="@drawable/blue_bg_with_text"
			android:layout_gravity="center"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
		</ImageView>
        -->
    </LinearLayout>

    <GridView
        android:id="@+id/calendar"
        android:layout_width="fill_parent"
        android:layout_height="234dp"
        android:layout_weight="1"
        android:numColumns="7" >

    </GridView>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    android:layout_weight="0"
    android:background="@drawable/bg_card"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hashashot" />

    <TextView
        android:id="@+id/txtonabenonit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/onabenonit" />

    <TextView
        android:id="@+id/txthaflaga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/haflaga" />

    <TextView
        android:id="@+id/txthodesh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/yomhahodesh" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1.91"
        android:text="" />
</LinearLayout>

</LinearLayout>